--- a/html/stats.html
+++ b/html/stats.html
@@ -11,11 +11,13 @@
     <title>desktopapp</title>
   </head>
   <body>
-    <div class="container">
-            <h3>calculated.gg desktop <span class="badge badge-danger">BETA</span></h3>
-            <p class="lead">Local replay parsing. Skip the wait!</p>
-            <a class="btn btn-outline-primary" href="http://127.0.0.1:5000/upload">Upload a replay!</a>
-    </div>
+    <h1>calculated.gg desktop <span class="badge badge-danger">BETA</span></h1>
+    <p class="lead">Scoreboard</p>
+    <h4>Blue Team</h4>
+    {orange}<br><br>
+    <h4>Blue Team</h4>
+    {blue}
+    </table>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
